# boolbox

./: README.md  pyproject.toml
boolbox/: pipeline.py
boolbox/cli/: __main__.py  main.py
boolbox/cli/commands/: anf.py  coeffs.py  qcircuit.py  tts.py
boolbox/core/: mobius_transform.py
boolbox/formatters/: base.py  image.py  json.py  latex.py  text.py  unicode.py
boolbox/generators/: anf_poly_gen.py
boolbox/io/: loaders.py
boolbox/parser/: sbox_parser.py
boolbox/quantum/: builder.py  utils.py
examples/: generate_examples.sh
examples/GIFT/: anf_equations.txt  sbox.txt
examples/PRESENT/: anf_equations.txt  sbox.txt
tests/: test_anf_poly_gen.py  test_mobius_transform.py  test_pipeline.py  test_sbox_parser.py
tests/test_cli/: test_coeffs.py  test_qcircuit.py  test_sc_anf.py  test_sc_tts.py
tests/test_formatters/: test_image.py  test_json.py  test_latex.py  test_text.py  test_unicode.py
tests/test_io/: test_loaders.py
tests/test_quantum/: test_builder.py
