[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boolbox"
version = "0.2.0"
description = "A lightweight cryptographic Boolean function analysis and quantum circuit synthesis tool."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Enes Buzluk" }
]
dependencies = []

[project.optional-dependencies]
image = ["matplotlib"]
quantum = ["qiskit>=2.4.0"]
quantum-vis = ["qiskit>=2.4.0", "matplotlib", "pylatexenc"]
all = ["qiskit>=2.4.0", "matplotlib", "pylatexenc"]
dev = ["pytest"]

[project.scripts]
boolbox = "boolbox.cli.main:cli_main"